--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lekhika Sriwal - Resume</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic|Open+Sans:300,400,500,700|Waiting+for+the+Sunrise|Shadows+Into+Light' rel='stylesheet' type='text/css'>
-</head>
-<body>
-    <div class="wrapper clearfix">
-        <div class="left">
-            <div class="name-hero">
-                <div class="me-img"></div>
-                <div class="name-text">
-                    <h1>Lekhika <em>Sriwal</em></h1>
-                    <p>(475)-414-5797</p>
-                    <p>lekhikasriwal2211@gmail.com</p>
-                    <p>
-                        <a href="https://www.linkedin.com/in/lekhika-sriwal-267a2533a" target="_blank">
-                            <img src="linkedin-icon.png" alt="LinkedIn" width="20px"> LinkedIn
-                        </a>
-                    </p>
-                    <p>
-                        <a href="https://www.instagram.com/lekhika_sriwal?igsh=aWljcWhnMmN1djFk" target="_blank">
-                            <img src="instagram-icon.png" alt="Instagram" width="20px"> Instagram
-                        </a>
-                    </p>
-                    <p>
-                        <a href="https://www.facebook.com/share/1BWdEpgoMk/?mibextid=wwXIfr" target="_blank">
-                            <img src="facebook-icon.png" alt="Facebook" width="20px"> Facebook
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="right">
-            <div class="inner">
-                <section>
-                    <h1>Summary</h1>
-                    <p>Dedicated and compassionate licensed nurse with hands-on experience gained through internships, providing high-quality patient care in diverse healthcare settings.</p>
-                </section>
-                <section>
-                    <h1>Education</h1>
-                    <p>University of New Haven, West Haven, CT - <em>Master of Science, Public Health (May 2025)</em></p>
-                    <p>Chitkara University, Punjab - <em>Bachelor of Science, Nursing (April 2023)</em></p>
-                </section>
-                <section>
-                    <h1>Internship Experience</h1>
-                    <p>Government Multi-Specialty Hospital, Chandigarh, Punjab - <em>Nurse Intern (Feb 2022)</em></p>
-                    <p>A.P. Jain Civil Hospital, Rajpura, Punjab - <em>Nurse Intern (Sept 2022)</em></p>
-                </section>
-                <section>
-                    <h1>Licensure & Certification</h1>
-                    <p>Registered Professional Nurse - New York (Aug 2024)</p>
-                    <p>Registered Professional Nurse - India (Dec 2022)</p>
-                    <p>Middle-Level Health Provider - India (Dec 2022)</p>
-                </section>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+body {
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+header {
+    background-color: #f4f4f4;
+    padding: 40px 0;
+}
+
+.profile img {
+    border-radius: 50%;
+    width: 150px;
+}
+
+h1, h2 {
+    font-family: 'Lora', serif;
+}
+
+.skill-set {
+    list-style: none;
+    padding: 0;
+}
+
+.skill-set li {
+    display: inline-block;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.social-icons a {
+    color: #333;
+    font-size: 24px;
+    margin: 10px;
+}
+
+footer {
+    background-color: #222;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
+}
